<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remote Keyboard</string>
    <string name="card_how_to_connect">How to connect</string>
    <string name="card_active_ime">Currently active keyboard</string>
    <string name="ime_active_ours">&lt;span style=\"color: darkgreen;\"&gt;&lt;b&gt;Remote Keyboard&lt;/b&gt;&lt;/span&gt; is active and ready to receive keystrokes.</string>
    <string name="ime_active_other">&lt;span style=\"color: red;\"&gt;&lt;b&gt;%1$s&lt;/b&gt;&lt;/span&gt; is currently selected. Switch to Remote Keyboard before typing from the browser.</string>
    <string name="ime_active_unknown">Could not determine the currently selected keyboard.</string>
    <string name="version_label">Version %1$s · build %2$s</string>
    <string name="err_noclient">No web client connected!</string>
    <string name="notification_title">Android Remote Keyboard</string>
    <string name="notification_waiting">Open https://%1$s:4430 in your browser</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="testtext">Test your connection here!</string>
    <string name="mi_help">Help</string>
    <string name="mi_select">Select Keyboard</string>
    <string name="err_notenabled">Remote Keyboard is not enabled as an inputmethod. Open system settings to enable it now?</string>
    <string name="err_notenabled_title">Inputmethod disabled</string>
    <string name="app_quickinstuctions">1. Set Remote Keyboard as your &lt;b&gt;input method&lt;/b&gt; (Select Keyboard).&lt;br/&gt;2. On your PC, open &lt;b&gt;https://%1$s:4430&lt;/b&gt; in a browser.&lt;br/&gt;3. Accept the certificate warning.&lt;br/&gt;4. Enter your password.&lt;br/&gt;5. Select any text field on your device.&lt;br/&gt;6. Start typing in the browser.</string>
    <string name="terminal_title">Android Remote Keyboard</string>
    <string name="terminal_statusbar">Status: Connected</string>
    <string name="notification_peer">Connected to: %1$s</string>
    <string name="msg_sent">Text sent to client</string>
    <string name="title_activity_replacements_list">Replacements</string>
    <string name="mi_add_replacement">Add</string>
    <string name="mi_replacements">Word Replacements</string>
    <string name="title_activity_replacement">Replacement Editor</string>
    <string name="mi_trash">Delete</string>
    <string name="lbl_shortcut">Shortcut:</string>
    <string name="lbl_phrase">Phrase:</string>
    <string name="no_replacements">No word substitutions defined. Use the plus symbol to add one.</string>
    <string name="err_no_replacement">"No substitute known for: %1$s"</string>
    <string name="mi_clear_list">Clear List</string>
    <string name="homepage">https://github.com/caco3/RemoteKeyboard/blob/main/USER_GUIDE.md</string>
    <string name="title_confirm">Please confirm</string>
    <string name="msg_really_delete">Do you really want to remove all entries from the list?</string>
    <string name="mi_export">Export</string>
    <string name="mi_import">Import</string>
    <string name="title_import">Import from URL</string>
    <string name="err_malformed_url">Malformed URL</string>
    <string name="err_network_error">Network error</string>
    <string name="err_corrupt_data">Corrupt data</string>
    <string name="msg_client_disconnected">Client disconnected</string>
    <string name="password">Password:</string>
    <string name="err_quicklauncher_not_assigned">Nothing assigned to this quicklauncer</string>
    <string name="err_quicklauncher_failed">Failed to launch activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_select_app">Select App to launch</string>
    <string name="pref_title_f1">F1 will launch:</string>
    <string name="pref_title_f2">F2 will launch:</string>
    <string name="pref_title_f3">F3 will launch:</string>
    <string name="pref_title_f4">F4 will launch:</string>
    <string name="pref_title_f5">F5 will launch:</string>
    <string name="pref_title_f6">F6 will launch:</string>
    <string name="pref_title_f7">F7 will launch:</string>
    <string name="pref_title_f8">F8 will launch:</string>
    <string name="pref_title_f9">F9 will launch:</string>
    <string name="pref_title_f10">F10 will launch:</string>
    <string name="pref_title_f11">F11 will launch:</string>
    <string name="pref_title_f12">F12 will launch:</string>
    <string name="mi_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_quicklaunchers">Quicklaunchers</string>
    <string name="msg_password_set">Password set</string>
    <string name="msg_password_not_set">Password not set</string>
    <string name="pref_title_password">Password protection</string>
    <string name="title_set_password">Set password</string>
    <string name="title_rate">Rate this app?</string>
    <string name="msg_rate">Hi,\nseems like you find this app useful. Would you consider rating it? This will only take a minute of your time, but encourages further development.</string>
    <string name="btn_sure">Sure!</string>
    <string name="btn_no_thanks">No thanks</string>
    <string name="btn_later">Later</string>
    <string name="pref_title_fullscreen">Fullscreen textboxes in landscape mode</string>
    <string name="title_tf">TextFiction</string>
    <string name="card_support_title">Support development</string>
    <string name="card_support_message">If you find this app useful, consider buying me a coffee — it helps keep the project going!</string>
    <string name="btn_buy_coffee">☕ Buy me a coffee</string>

    <string name="msg_password_required">A password is required to secure the keyboard server. Set one now (minimum 4 characters).</string>
    <string name="btn_set_password">Set Password</string>
    <string name="hint_password_min_length">Minimum 4 characters</string>
    <string name="err_password_too_short">Password must be at least 4 characters</string>
    <string name="err_password_required">Password cannot be empty</string>
    <string name="buymeacoffee_url">https://www.buymeacoffee.com/caco3</string>

</resources>