<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/item_select"
		android:icon="@drawable/ic_menu_keyboard"
		app:showAsAction="never"
		android:title="@string/mi_select">
	</item>
	<item
		android:id="@+id/item_tf"
		android:icon="@drawable/ic_menu_book"
		app:showAsAction="never"
		android:title="@string/title_tf">
	</item>
	<item
		android:id="@+id/item_settings"
		android:icon="@drawable/ic_menu_settings"
		android:title="@string/mi_settings">
	</item>
	<item
		android:id="@+id/item_replacements"
		android:icon="@drawable/ic_menu_replacements"
		android:title="@string/mi_replacements">
	</item>
	<item
		android:id="@+id/item_help"
		android:icon="@drawable/ic_menu_help"
		android:title="@string/mi_help">
	</item>

</menu>